<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sf.misc</groupId>
    <artifactId>misc</artifactId>
    <packaging>pom</packaging>
    <version>1.5.1-SNAPSHOT</version>
    <modules>
        <module>hive-jdbc-authorizer</module>
        <module>hive-query-planer</module>
        <module>yarn-presto</module>
        <module>hive-udfs</module>
    </modules>

    <properties>
        <hive-version>2.1.1</hive-version>
        <jstorm-version>2.2.1</jstorm-version>
        <kafka-version>0.11.0.0</kafka-version>
        <hadoop-version>2.7.3</hadoop-version>
        <presto-version>0.199-SNAPSHOT</presto-version>
        <netty-version>4.1.20.Final</netty-version>
        <guava-version>24.0-jre</guava-version>
        <commons-logging-version>1.2</commons-logging-version>
        <junit-version>4.12</junit-version>
        <mysql-connector-version>5.1.42</mysql-connector-version>

        <compiler-plugin-version>3.7.0</compiler-plugin-version>
        <resource-plugin-version>3.0.2</resource-plugin-version>
    </properties>

    <repositories>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </repository>
        <repository>
            <id>sf-tech</id>
            <url>http://nexus.sf-express.com/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>aliyun</id>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>utf8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>utf8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>